# hprof-toolkit-rust

./: .gitignore  Cargo.toml  INDEX_FILE_FORMATS.md  LICENSE  README.md
.github/workflows/: ci.yml
examples/: class_histogram.rs  diff_summary.rs  find_strings.rs  inspect_object.rs  largest_arrays.rs  path_to_root.rs  thread_stacks.rs
src/: array_index.rs  aux_index.rs  diff.rs  diff_index.rs  dominator.rs  lib.rs  main.rs  object_store.rs  pipeline.rs  query.rs  ref_index.rs  resolved.rs  root_index.rs  sort.rs  vfs.rs
src/aux_query/: mod.rs  record.rs  thread_names.rs
src/heap_index/: mod.rs  sub_record.rs
src/heap_parser/: mod.rs  record.rs
src/heap_query/: mod.rs  name_index.rs  resolve.rs
src/hprof/: error.rs  header.rs  mod.rs  record.rs
src/record_index/: entry.rs  mod.rs
src/server/: handlers.rs  mcp.rs  mod.rs
