[package]
name = "hprof-toolkit"
version = "0.1.0"
edition = "2024"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
memmap2 = "0.9"
thiserror = "2"
rayon = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
